<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="MissingDefaultResource">

    <item
        android:id="@+id/nav_ref_earn"
        android:icon="@drawable/ic_ref_earn"
        android:title="@string/title_ref_earn" />

    <item
        android:id="@+id/nav_live"
        android:icon="@drawable/ic_mega"
        android:title="@string/title_mega" />

    <item
        android:id="@+id/nav_join"
        android:icon="@drawable/ic_join"
        android:title="@string/title_join" />

    <item
        android:id="@+id/nav_result"
        android:icon="@drawable/ic_result"
        android:title="@string/title_result"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"
        />

</menu>